# neural-rs-decoder

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
notebooks/: 00_reproducibility_train.ipynb  train.ipynb
results/: README.md
src/: channel.py  codec.py  dataset.py  evaluate.py  metrics.py  model.py  pcap_source.py  runtime.py  train.py  utils.py
tests/: test_channel.py  test_codec.py  test_dataset.py  test_metrics.py  test_model.py
weights/20260515_102750_moderate_seed42/: history.csv  meta.yaml
