[project]
name = "neural-rs-decoder"
version = "0.1.0"
description = "Neural network-assisted decoding of Reed-Solomon RS(255,223) codes"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]